--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,54 @@
 body {
     margin: 0;
 }
+
+.material-icons.md-18 {
+    font-size: 18px !important;
+    height: 18px !important;
+    width: 18px !important;
+}
+
+.material-icons.md-24 {
+    font-size: 24px !important;
+    height: 24px !important;
+    width: 24px !important;
+}
+
+.material-icons.md-36 {
+    font-size: 36px !important;
+    height: 36px !important;
+    width: 36px !important;
+}
+
+.material-icons.md-48 {
+    font-size: 48px !important;
+    height: 48px !important;
+    width: 48px !important;
+}
+
+.box-shadow-1 {
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+.box-shadow-2 {
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25), 0 3px 6px rgba(0, 0, 0, 0.30);
+}
+
+.box-shadow-3 {
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+.box-shadow-4 {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+
+.box-shadow-5 {
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
+
+.text-shadow-1 {
+    text-shadow: 0 0 20px rgba(0, 0, 0, .5), 0 0 5px rgba(0, 0, 0, 0.25);
+    &:hover {
+        background-color: red;
+    }
+}
