map-toolbar.component

--- a/src/app/components/map/toolbar/map-toolbar.component.html
+++ b/src/app/components/map/toolbar/map-toolbar.component.html
@@ -1,13 +1,13 @@
 <span class="fa fa-stack fa-2x" [@spinIn]="state" (click)="toggle()">
   <i class="fa fa-circle fa-stack-2x fa-inverse text-shadow-1"></i>
-  <i class="fa-stack-1x material-icons" [@fadeOut]="state">menu</i>
-  <i class="fa-stack-1x material-icons" [@fadeIn]="state">clear</i>
+  <i class="main fa-stack-1x material-icons" [@fadeOut]="state">menu</i>
+  <i class="main fa-stack-1x material-icons" [@fadeIn]="state">clear</i>
 </span>
 
 <div class="icons" [@bounceIn]="state">
-    <div *ngFor="let icon of icons" class="icon">
+    <div *ngFor="let icon of icons" class="icon" (click)="click(icon)">
         <span class="fa fa-stack fa-2x">
-          <i class="fa fa-circle fa-stack-2x fa-inverse text-shadow-1"></i>
+          <i class="fa fa-background fa-circle fa-stack-2x fa-inverse text-shadow-1"></i>
           <i class="material-icons fa-stack-1x">{{icon}}</i>
         </span>
     </div>
