--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
     <div class="icon"></div>
 </div>
 
-<nexrad-map></nexrad-map>
+<header></header>
+<map></map>
+<footer></footer>
 
 <router-outlet></router-outlet>
