--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,12 +1,7 @@
 :host {
     display: block;
+    position: relative;
+    z-index: 1;
     width: 100%;
-    height: 100%;
-}
-
-#radar {
-    position: absolute;
-    z-index: 500;
-    height: 100%;
-    width: 100%;
+    height: calc(100% - 75px);
 }
