--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,4 @@
+$primary-background: #fff4d6;
 body {
     margin: 0;
 }
@@ -77,8 +78,9 @@ body {
 }
 
 .text-shadow-1 {
-    text-shadow: 0 0 20px rgba(0, 0, 0, .5), 0 0 5px rgba(0, 0, 0, 0.25);
-    &:hover {
-        background-color: red;
-    }
+    text-shadow: 0 0 10px rgba(0, 0, 0, .75);
+}
+
+.fa-inverse {
+    color: $primary-background !important;
 }
