--- a/src/app/components/map/map.component.html
+++ b/src/app/components/map/map.component.html
@@ -1,2 +1,3 @@
 <map-toolbar></map-toolbar>
 <basemaps *ngIf="mapService.openBasemaps" (setBasemap)="setBasemap($event)"></basemaps>
+<overlays *ngIf="mapService.openOverlays" (setOverlay)="setOverlay($event)"></overlays>
