--- a/src/app/components/map/map.component.scss
+++ b/src/app/components/map/map.component.scss
@@ -1,7 +1,14 @@
 :host {
-    display: block;
-    position: relative;
-    z-index: 1;
-    width: 100%;
-    height: calc(100% - 75px);
+  display: block;
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: calc(100% - 75px);
+  &.fullscreen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    z-index: 3;
+  }
 }
